# opus_ispc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: build.yml
benchmark/: opus_ispc_benchmark.cpp
ispc/: CMakeLists.txt  sum.ispc
test/: opus_ispc_test.cpp
